tests/codegen/fail/scalar/derive_input/derive_transparent_multiple_named_fields.rs
use juniper::GraphQLScalar;

#[derive(GraphQLScalar)]
#[graphql(transparent)]
struct Scalar {
    id: i32,
    another: i32,
}

fn main() {}
