tests/codegen/fail/scalar/derive_input/derive_transparent_multiple_named_fields.stderr
error: GraphQL scalar `transparent` attribute argument requires exactly 1 field
 --> fail/scalar/derive_input/derive_transparent_multiple_named_fields.rs:4:1
  |
4 | #[graphql(transparent)]
  | ^
